added .json to .e4smcode converter
new plugin for .json to .e4smcode conversion via the ILMtoE4SM command, plus slight changes to the welcome page

--- a/packaging/e4sm.de.intro.custom/css/style.css
+++ b/packaging/e4sm.de.intro.custom/css/style.css
@@ -8,3 +8,15 @@ pre code {
   min-width: 100px;
   padding: 0;
 }
+
+.p1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {font-family: Arial, Helvetica, sans-serif;}
+
+h2 {font-family: Arial, Helvetica, sans-serif;}
+
+h3 {font-family: Arial, Helvetica, sans-serif;}
+
+pre {font-family: Arial, Helvetica, sans-serif;}
